--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,27 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Added by cargo
+
+/target
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+
+# nix -----------------------------------------------
+
+# Ignore build outputs from performing a nix-build or `nix build` command
+result
+result-*
+
+# direnv
+.direnv/
+
+# devenv
+.devenv*
+devenv.local.nix
+devenv.local.yaml
