--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,6 +1,16 @@
 version: "3"
 
 tasks:
+  fmt:
+    desc: Format code with rustfmt
+    cmds:
+      - cargo fmt
+
+  fmt-check:
+    desc: Check if code is formatted
+    cmds:
+      - cargo fmt -- --check
+
   lint:
     desc: Run linter
     cmds:
@@ -33,8 +43,9 @@ tasks:
       - cargo llvm-cov --all-features --workspace --open
 
   dev:
-    desc: Development workflow - check, test, lint
+    desc: Development workflow - format, check, test, lint
     cmds:
+      - cargo fmt
       - cargo check
       - cargo test
       - cargo clippy --all-targets --all-features -- -D warnings
