--- a/deny.toml
+++ b/deny.toml
@@ -3,3 +3,25 @@ ignore = [
   # ignore unmaintained `paste`
   "RUSTSEC-2024-0436",
 ]
+
+[licenses]
+# List of explicitly allowed licenses
+# See https://spdx.org/licenses/ for list of possible licenses
+# [possible values: any SPDX 3.11 short identifier (+ optional exception)].
+allow = [
+  "MIT",
+  "Apache-2.0",
+  "Unicode-3.0",
+  "Apache-2.0 WITH LLVM-exception",
+  "BSD-2-Clause",
+  "BSD-3-Clause",
+  "Unicode-3.0",
+  "Unicode-DFS-2016",
+  "MPL-2.0",
+  "ISC",
+  "Zlib",
+  "BSL-1.0",
+  "OFL-1.1",
+  "LicenseRef-UFL-1.0",
+  "Ubuntu-font-1.0",
+]
