--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 argmin = "0.11.0"
+argmin-math = { version = "0.5.1", features = ["nalgebra_latest"] }
 nalgebra = "0.34.1"
