--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,17 @@ name = "eunoia"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-argmin = "0.11.0"
+argmin = { version = "0.11.0", features = ["wasm-bindgen"] }
 argmin-math = { version = "0.5.1", features = ["nalgebra_latest"] }
 nalgebra = "0.34.1"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.6"
+console_error_panic_hook = "0.1"
+getrandom = { version = "0.2", features = ["js"] }
