--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ crate-type = ["cdylib", "rlib"]
 argmin = { version = "0.11.0", features = ["wasm-bindgen"] }
 argmin-math = { version = "0.5.1", features = ["nalgebra_latest"] }
 nalgebra = "0.34.1"
-rand = "0.8"
+rand = "0.9"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1"
-getrandom = { version = "0.2", features = ["js"] }
+getrandom = "0.3"
