--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ rand = "0.9"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
+console_error_panic_hook = "0.1"
