--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1"
+serde_json = "1.0"
+web-sys = { version = "0.3", features = ["console"] }
+
