--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^24.10.1",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
+    "prettier-plugin-svelte": "^3.4.0",
     "rollup": "^4.53.3",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
