--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,18 +32,20 @@ jobs:
           cache-on-failure: true
 
       - name: Install wasm-pack
-        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+        run:
+          curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
       - name: Build WASM
+        working-directory: crates/eunoia-wasm
         run: |
-          wasm-pack build crates/eunoia-wasm --target web --out-dir ../../web/pkg
-          ls -la web/pkg
+          wasm-pack build --target web --out-dir ../../web/pkg
+          ls -la ../../web/pkg/
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
           cache-dependency-path: web/package-lock.json
 
       - name: Install web dependencies
