--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,8 @@
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.5",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-sitemap": "^0.8.2",
     "vite-plugin-top-level-await": "^1.6.0",
     "vite-plugin-wasm": "^3.5.0"
   },
