--- a/crates/eunoia/Cargo.toml
+++ b/crates/eunoia/Cargo.toml
@@ -13,9 +13,12 @@ categories = ["graphics", "visualization", "mathematics"]
 argmin = "0.11.0"
 argmin-math = { version = "0.5.1", features = ["nalgebra_latest"] }
 finitediff = "0.2.0"
+i_overlay = "4.1.1"
 nalgebra = "0.34.1"
 num-complex = "0.4"
 rand = "0.9"
 
 [features]
+default = []
 wasm = ["argmin/wasm-bindgen"]
+plotting = []
