--- a/crates/eunoia/Cargo.toml
+++ b/crates/eunoia/Cargo.toml
@@ -16,6 +16,7 @@ finitediff = "0.2.0"
 i_overlay = "4.1.1"
 nalgebra = "0.34.1"
 num-complex = "0.4"
+polylabel-mini = "0.1.0"
 rand = "0.9"
 
 [features]
